# rust_wasm_first_project

./: .gitignore  Cargo.toml  README.md  _index.html  index.html  main.css
components/: common.js
components/frame-rate/: frame-rate.html  frame-rate.js
components/game-of-life/: game-of-life.css  game-of-life.html  game-of-life.js
components/space-invaders/: space-invaders.html  space-invaders.js
game_of_life/package/: game_of_life_bg.wasm  package.json
game_of_life/src/: lib.rs  universe.rs
package/: game_of_life.js  game_of_life_bg.wasm  package.json  rust_wasm_first_project.js  rust_wasm_first_project_bg.wasm  space_invaders.js  space_invaders_bg.wasm
rust/client/: Cargo.toml
rust/client/src/: main.rs
rust/game_of_life/: Cargo.toml
rust/game_of_life/src/: cell.rs
rust/server/: Cargo.toml
rust/server/src/: main.rs
rust/space_invaders/src/: frame.rs  lib.rs
space_invaders/: Cargo.toml
space_invaders/src/: engine.rs  frame.rs  invader.rs  invaders.rs  lib.rs  player.rs  render.rs  shot.rs
src/: lib.rs
