[package]
name = "space_invaders"
version = "0.1.0"
authors = ["Jonathan Pinto Sperafico <jhonny.potter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
rusty_time = "0.11.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"