[package]
name = "server"
version = "0.1.0"
authors = ["Jonathan Pinto Sperafico <jhonny.potter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qp2p = "0.12.6"
bytes = "1.0.1"
tokio = "1.7.1"
anyhow = "1.0"
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"